Added class for photo within about section.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   				</object>
   			</div>
   			<div class="about-content" id="About">
-  				<object type="image/svg+xml" data="https://dl.dropboxusercontent.com/s/xy7o9mkjrlkr4gp/About-Photo.svg?dl=0">
+  				<object class="about-photo" type="image/svg+xml" data="https://dl.dropboxusercontent.com/s/xy7o9mkjrlkr4gp/About-Photo.svg?dl=0">
   				</object>
   				<br>
   				<h1 class="about-heading">
