Added HubSpot Inbound Certificate

--- a/index.html
+++ b/index.html
@@ -81,6 +81,19 @@
   				<img src="https://cloud.githubusercontent.com/assets/19844338/25404276/43b08dd0-29cd-11e7-8eed-710097f49aa3.png" class="skills-line-break">	
   			</div>
   			<div class="skills-content" id="Skills">
+				<h1 class="languages-heading" style="font-size: 1.5em"> 
+  					Certificates
+  				</h1>
+  				<br>
+  				<br>
+				<!-- Begin: HubSpot Academy - Inbound Badge -->
+  				<a href="http://academy.hubspot.com/certification" title="Inbound">
+					<img src="https://user-images.githubusercontent.com/19844338/32076996-e4b76248-ba6f-11e7-849c-a33dbdb73c66.png" class="skills-slides" style="height: auto; width: 35%;">
+				</a>
+				<!-- End: HubSpot Academy - Inbound Badge -->
+  				<br>
+  				<br>
+  				<br>
   				<h1 class="languages-heading" style="font-size: 1.5em"> 
   					Languages
   				</h1>
