cleaning up code

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   				<br>
 				<!-- Begin: HubSpot Academy - Inbound Badge -->
   				<a href="http://academy.hubspot.com/certification" title="Inbound">
-					<img src="https://user-images.githubusercontent.com/19844338/32076996-e4b76248-ba6f-11e7-849c-a33dbdb73c66.png" class="skills-slides" style="height: auto; width: 35%;">
+					<img src="https://user-images.githubusercontent.com/19844338/32076996-e4b76248-ba6f-11e7-849c-a33dbdb73c66.png" class="skills-slides" style="height: auto; width: 35%;"/>
 				</a>
 				<!-- End: HubSpot Academy - Inbound Badge -->
   				<br>
